CSS bug squashing continues

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -562,7 +562,7 @@ body {
 /* FIREFOX SPECIFIC CSS */
 @-moz-document url-prefix() {
     .logoDiv {
-       width: 180px; 
+       width: 145px; 
     }
     @media (width: 1010px) {
         .nav {
@@ -575,7 +575,7 @@ body {
 
 @supports (-ms-ime-align: auto) {
     .logoDiv {
-        width: 180px;      
+        width: 145px;      
     }
     .background1 {
         width: 135px;
